--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-numpy==1.20.3
-matplotlib==3.4.2
-seaborn==0.11.1
-pandas==1.2.4
-folium==0.12.1
+numpy==1.26.4
+matplotlib==3.8.4
+seaborn==0.13.2
+pandas==2.2.2
+folium==0.16.0
 google-cloud-bigquery==2.20.0
+google-colab==1.0.0 
+plotly==5.21.0      
+scikit-learn==1.4.2 
+python==3.11.9
